--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content="0; url=revopt_app_v6.html">
+<meta http-equiv="refresh" content="0; url=revopt_app_v6.html?v=1">
+<script>
+  // Hard redirect as a backup (also carries a cache-busting param)
+  location.replace('revopt_app_v6.html?v=1');
+</script>
+<noscript>
+  <a href="revopt_app_v6.html?v=1">Continue to Revopt</a>
+</noscript>
