--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content="0; url=revopt_app_v6.html?v=1">
-<script>
-  // Hard redirect as a backup (also carries a cache-busting param)
-  location.replace('revopt_app_v6.html?v=1');
-</script>
-<noscript>
-  <a href="revopt_app_v6.html?v=1">Continue to Revopt</a>
-</noscript>
+<meta http-equiv="refresh" content="0; url=app.html?v=1">
+<script>location.replace('app.html?v=1');</script>
+<noscript><a href="app.html?v=1">Go to Revopt</a></noscript>
